# ml_cv_courses_sirius

./: .gitignore  README.md  дз_4.md
exam/: exam.py  pyproject.toml  requirements.txt
