[tool.poetry]
name = "cv-course-exam"
version = "0.1.0"
description = "Шаблон экзамена по обучению модели на PyTorch для bbox-регрессии"
authors = ["Диц Даниил"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.1.0"
torchvision = "0.16.0"
numpy = "1.24.3"
pillow = "10.0.0"
matplotlib = "3.7.2"
opencv-python = "4.8.0.76"
pyyaml = "6.0.1"
tqdm = "4.66.1"
scikit-learn = "1.3.0"
albumentations = "1.3.1"
tensorboard = "2.14.0"
roboflow = "1.0.0"
jupyterlab = "^4.0.0"
ipywidgets = "^8.0.0"
pandas = "2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
